--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-19  Daichi Kawahata <daichi@xfce.org>
+
+	* de.po: Updated German translations by Fabian Nowak
+	  <timystery@arcor.de>.
+
 2006-02-14  Daichi Kawahata <daichi@xfce.org>
 
 	* fr.po: Updated French translations by Stephane Roy
