--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-22  Daichi Kawahata <daichi@xfce.org>
+
+	* eu.po: Added Basque translations by Piarres Beobide
+	  <pi@beobide.net>.
+
 2006-02-19  Daichi Kawahata <daichi@xfce.org>
 
 	* de.po: Updated German translations by Fabian Nowak
