Updated/Added Greek translations
(Old svn revision: 19993)

--- a/po/el.po
+++ b/po/el.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.1.3svn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-02-11 13:45+0900\n"
-"PO-Revision-Date: 2005-11-27 04:22+0200\n"
+"POT-Creation-Date: 2006-02-22 22:56+0200\n"
+"PO-Revision-Date: 2006-02-22 22:04+0200\n"
 "Last-Translator: Stavros Giannouris <stavrosg2002@freemail.gr>\n"
 "Language-Team: Greek <nls@tux.hellug.gr>\n"
 "MIME-Version: 1.0\n"
@@ -264,17 +264,17 @@ msgstr "Προσαρμογή Εργαλειθήκης..."
 #: ../exo/exo-url.c:283
 #, c-format
 msgid "Unable to open `%s'"
-msgstr ""
+msgstr "Αδυναμία ανοίγματος του \"%s\""
 
 #: ../exo/exo-url.c:305
 #, c-format
 msgid "The URL `%s' is not supported"
-msgstr ""
+msgstr "Το URL \"%s\"1 δεν υποστηρίζεται"
 
 #: ../exo/exo-url.c:377
 #, c-format
 msgid "Failed to open `%s'."
-msgstr ""
+msgstr "Αποτυχία ανοίγματος \"%s\"."
 
 #: ../exo/exo-wrap-table.c:169
 msgid "Column spacing"
@@ -388,18 +388,18 @@ msgstr "Παρακαλούμε αναφέρατε σφάλματα στον <%s>
 #: ../exo-helper/exo-helper-chooser-dialog.c:121
 #: ../exo-helper/exo-preferred-applications-settings.c:62
 msgid "Preferred Applications"
-msgstr ""
+msgstr "Προτιμώμενες Εφαρμογές"
 
 #.
 #. Internet
 #.
 #: ../exo-helper/exo-helper-chooser-dialog.c:140
 msgid "Internet"
-msgstr ""
+msgstr "Διαδίκτυο"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:153
 msgid "Default Web Browser"
-msgstr ""
+msgstr "Προεπιλεγμένος Περιηγητής"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:161
 msgid ""
@@ -409,7 +409,7 @@ msgstr ""
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:185
 msgid "Default Mail Reader"
-msgstr ""
+msgstr "Προεπιλεγμένη Εφαρμογή Αλληλογραφίας"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:193
 msgid ""
@@ -422,11 +422,11 @@ msgstr ""
 #.
 #: ../exo-helper/exo-helper-chooser-dialog.c:213
 msgid "Utilities"
-msgstr ""
+msgstr "Εργαλεία"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:226
 msgid "Default Terminal Emulator"
-msgstr ""
+msgstr "Προεπιλεγμένο Τερματικό"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:234
 msgid ""
@@ -445,7 +445,7 @@ msgstr ""
 
 #: ../exo-helper/exo-helper-chooser.c:319
 msgid "No application selected"
-msgstr ""
+msgstr "Δεν επιλέχθηκε εφαρμογή"
 
 #: ../exo-helper/exo-helper-chooser.c:335
 msgid "Failed to set default Web Browser"
@@ -461,19 +461,19 @@ msgstr ""
 
 #: ../exo-helper/exo-helper-chooser.c:401
 msgid "Select application"
-msgstr ""
+msgstr "Επιλογή μιας Εφαρμογής"
 
 #: ../exo-helper/exo-helper-chooser.c:439
 msgid "Choose a custom Web Browser"
-msgstr ""
+msgstr "Επιλογή προσαρμοσμένου Περιηγητή"
 
 #: ../exo-helper/exo-helper-chooser.c:440
 msgid "Choose a custom Mail Reader"
-msgstr ""
+msgstr "Επιλογή προσαρμοσμένης Εφαρμογής Αλληλογραφίας"
 
 #: ../exo-helper/exo-helper-chooser.c:441
 msgid "Choose a custom Terminal Emulator"
-msgstr ""
+msgstr "Επιλογή προσαρμοσμένου Τερματικού"
 
 #: ../exo-helper/exo-helper-chooser.c:446
 msgid ""
@@ -499,7 +499,7 @@ msgstr ""
 
 #: ../exo-helper/exo-helper-chooser.c:687
 msgid "_Other..."
-msgstr ""
+msgstr "Άλ_λες..."
 
 #: ../exo-helper/exo-helper-chooser.c:688
 msgid "Use a custom application which is not included in the above list."
@@ -507,7 +507,7 @@ msgstr ""
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:142
 msgid "Choose Preferred Application"
-msgstr ""
+msgstr "Επιλογή Προτιμώμενης Εφαρμογής"
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:285
 msgid ""
@@ -529,7 +529,7 @@ msgstr ""
 
 #: ../exo-helper/exo-helper.c:383
 msgid "No command specified"
-msgstr ""
+msgstr "Δεν ορίστηκε εντολή"
 
 #: ../exo-helper/exo-helper.c:675
 msgid "Failed to open helpers.rc for writing"
@@ -541,7 +541,7 @@ msgstr ""
 
 #: ../exo-helper/helpers/Terminal.desktop.in.h:1
 msgid "Xfce Terminal"
-msgstr ""
+msgstr "Τερματικό Xfce"
 
 #: ../exo-helper/helpers/balsa.desktop.in.h:1
 msgid "Balsa"
@@ -549,19 +549,19 @@ msgstr ""
 
 #: ../exo-helper/helpers/debian-sensible-browser.desktop.in.h:1
 msgid "Debian Sensible Browser"
-msgstr ""
+msgstr "Φυλλομετρητής Sensible Debian"
 
 #: ../exo-helper/helpers/debian-x-terminal-emulator.desktop.in.h:1
 msgid "Debian X Terminal Emulator"
-msgstr ""
+msgstr "Προσομοίωση Τερματικού Debian"
 
 #: ../exo-helper/helpers/epiphany.desktop.in.h:1
 msgid "Epiphany Web Browser"
-msgstr ""
+msgstr "Περιηγητής Διαδικτύου Epiphany"
 
 #: ../exo-helper/helpers/eterm.desktop.in.h:1
 msgid "Enlightened Terminal Emulator"
-msgstr ""
+msgstr "Προσομοίωση Τερματικού Enlightenment"
 
 #: ../exo-helper/helpers/evolution.desktop.in.h:1
 msgid "Novell Evolution"
@@ -573,11 +573,11 @@ msgstr ""
 
 #: ../exo-helper/helpers/galeon.desktop.in.h:1
 msgid "Galeon Web Browser"
-msgstr ""
+msgstr "Περιηγητής Διαδικτύου Galeon"
 
 #: ../exo-helper/helpers/gnome-terminal.desktop.in.h:1
 msgid "GNOME Terminal"
-msgstr ""
+msgstr "Τερματικό GNOME"
 
 #: ../exo-helper/helpers/kmail.desktop.in.h:1
 msgid "KMail"
@@ -585,11 +585,11 @@ msgstr ""
 
 #: ../exo-helper/helpers/konqueror.desktop.in.h:1
 msgid "Konqueror Web Browser"
-msgstr ""
+msgstr "Περιηγητής Διαδικτύου Konqueror"
 
 #: ../exo-helper/helpers/mozilla-browser.desktop.in.h:1
 msgid "Mozilla Browser"
-msgstr ""
+msgstr "Περιηγητής Διαδικτύου Mozilla"
 
 #: ../exo-helper/helpers/mozilla-mailer.desktop.in.h:1
 msgid "Mozilla Mail"
@@ -597,11 +597,11 @@ msgstr ""
 
 #: ../exo-helper/helpers/opera-browser.desktop.in.h:1
 msgid "Opera Browser"
-msgstr ""
+msgstr "Περιηγητής Ιστοσελίδων Opera"
 
 #: ../exo-helper/helpers/opera-mailer.desktop.in.h:1
 msgid "Opera Mail"
-msgstr ""
+msgstr "Αναγνώστης Αλληλογραφίας Opera"
 
 #: ../exo-helper/helpers/thunderbird.desktop.in.h:1
 msgid "Mozilla Thunderbird"
@@ -609,7 +609,7 @@ msgstr ""
 
 #: ../exo-helper/helpers/xterm.desktop.in.h:1
 msgid "X Terminal"
-msgstr ""
+msgstr "Τερματικό X"
 
 #: ../exo-open/main.c:43
 msgid "Usage: exo-open [URLs...]"
@@ -620,15 +620,15 @@ msgid "       exo-open --launch TYPE [PARAMETERs...]"
 msgstr ""
 
 #: ../exo-open/main.c:46
-#, fuzzy
 msgid "  -h, --help                          Print this help message and exit"
-msgstr "  -h, --help           Εμφανίζει αυτό το κείμενο βοήθειας\n"
+msgstr ""
+"  -h, --help                          Εμφανίζει αυτό το κείμενο βοήθειας"
 
 #: ../exo-open/main.c:47
-#, fuzzy
 msgid ""
 "  -v, --version                       Print version information and exit"
-msgstr "  -v, --version        Εμφανίζει τις πληροφορίες έκδοσης\n"
+msgstr ""
+"  -v, --version                       Εμφανίζει τις πληροφορίες έκδοσης"
 
 #: ../exo-open/main.c:49
 msgid ""
@@ -662,7 +662,6 @@ msgid ""
 msgstr ""
 
 #: ../exo-open/main.c:100
-#, fuzzy
 msgid ""
 "Copyright (c) 2005-2006\n"
 "        os-cillation e.K. All rights reserved.\n"
@@ -670,7 +669,7 @@ msgid ""
 "Written by Benedikt Meurer <benny@xfce.org>.\n"
 "\n"
 msgstr ""
-"Copyright (c) 2005\n"
+"Copyright (c) 2005-2006\n"
 "        os-cillation e.K. All rights reserved.\n"
 "\n"
 "Γραμμένο από τον Benedikt Meurer <benny@xfce.org>.\n"
