--- a/po/de.po
+++ b/po/de.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.1.3svn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-02-11 13:45+0900\n"
-"PO-Revision-Date:  2006-02-16 12:26+0100\n"
-"Last-Translator: Fabian Nowak <timystery@arcor.de>\n"
+"POT-Creation-Date: 2006-02-23 23:34+0100\n"
+"PO-Revision-Date:  2006-02-23 23:36+0100\n"
+"Last-Translator: Benedikt Meurer <benny@xfce.org>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -45,7 +45,7 @@ msgstr ""
 "Der bvorzugte Ort um einen String abzukürzen, falls das Label nicht genug "
 "Platz hat, den ganzen String anzuzeigen, falls überhaupt"
 
-#: ../exo/exo-icon-bar.c:259 ../exo/exo-icon-view.c:643
+#: ../exo/exo-icon-bar.c:259 ../exo/exo-icon-view.c:645
 msgid "Orientation"
 msgstr "Orientierung"
 
@@ -53,19 +53,19 @@ msgstr "Orientierung"
 msgid "The orientation of the iconbar"
 msgstr "Die Orientierung der Symbolleiste"
 
-#: ../exo/exo-icon-bar.c:276 ../exo/exo-icon-view.c:660
+#: ../exo/exo-icon-bar.c:276 ../exo/exo-icon-view.c:662
 msgid "Pixbuf column"
 msgstr "Pixbuf-Spalte"
 
-#: ../exo/exo-icon-bar.c:277 ../exo/exo-icon-view.c:661
+#: ../exo/exo-icon-bar.c:277 ../exo/exo-icon-view.c:663
 msgid "Model column used to retrieve the icon pixbuf from"
 msgstr "Spalte für das Model, von der das Icon Pixbuf geholt werden soll"
 
-#: ../exo/exo-icon-bar.c:292 ../exo/exo-icon-view.c:740
+#: ../exo/exo-icon-bar.c:292 ../exo/exo-icon-view.c:757
 msgid "Text column"
 msgstr "Textspalte"
 
-#: ../exo/exo-icon-bar.c:293 ../exo/exo-icon-view.c:741
+#: ../exo/exo-icon-bar.c:293 ../exo/exo-icon-view.c:758
 msgid "Model column used to retrieve the text from"
 msgstr "Spale für das Model, von der der Text geholt werden soll"
 
@@ -109,108 +109,116 @@ msgstr "Randfarbe für das Cursorelement"
 msgid "Cursor item text color"
 msgstr "Textfarbe für das Cursorelement"
 
-#: ../exo/exo-icon-view.c:546
+#: ../exo/exo-icon-view.c:548
 msgid "Column Spacing"
 msgstr "Spaltenabstand"
 
-#: ../exo/exo-icon-view.c:547
+#: ../exo/exo-icon-view.c:549
 msgid "Space which is inserted between grid column"
 msgstr "Platz, der zwischen Gittespalten eingefügt wird"
 
-#: ../exo/exo-icon-view.c:563
+#: ../exo/exo-icon-view.c:565
 msgid "Number of columns"
 msgstr "Anzahl Spalten"
 
-#: ../exo/exo-icon-view.c:564
+#: ../exo/exo-icon-view.c:566
 msgid "Number of columns to display"
 msgstr "Anzahl anzuzeigender Spalten"
 
-#: ../exo/exo-icon-view.c:581
+#: ../exo/exo-icon-view.c:583
 msgid "Width for each item"
 msgstr "Breite für jedes Element"
 
-#: ../exo/exo-icon-view.c:582
+#: ../exo/exo-icon-view.c:584
 msgid "The width used for each item"
 msgstr "Die Breite, die für jedes Element verwendet wird"
 
-#: ../exo/exo-icon-view.c:597
+#: ../exo/exo-icon-view.c:599
 msgid "Margin"
 msgstr "Rand"
 
-#: ../exo/exo-icon-view.c:598
+#: ../exo/exo-icon-view.c:600
 msgid "Space which is inserted at the edges of the icon view"
 msgstr "Platz, der an den Rändern der Symbolansicht eingefügt wird"
 
-#: ../exo/exo-icon-view.c:614
+#: ../exo/exo-icon-view.c:616
 msgid "Markup column"
 msgstr "Auswahlspalte"
 
-#: ../exo/exo-icon-view.c:615
+#: ../exo/exo-icon-view.c:617
 msgid "Model column used to retrieve the text if using Pango markup"
 msgstr ""
 "Modellspalte, anhand derer Text geholt wird, falls die Auszeichungssprache "
 "Pango verwendet wird"
 
-#: ../exo/exo-icon-view.c:629
+#: ../exo/exo-icon-view.c:631
 msgid "Icon View Model"
 msgstr "Modell zur Symbolansicht"
 
-#: ../exo/exo-icon-view.c:630
+#: ../exo/exo-icon-view.c:632
 msgid "The model for the icon view"
 msgstr "Das Modell für die Symbolansicht"
 
-#: ../exo/exo-icon-view.c:644
+#: ../exo/exo-icon-view.c:646
 msgid ""
 "How the text and icon of each item are positioned relative to each other"
 msgstr ""
 "Wie der Text und das Symbol jedes Elements relativ zueinandner positioniert "
 "werden"
 
-#: ../exo/exo-icon-view.c:676
+#: ../exo/exo-icon-view.c:678
 msgid "Reorderable"
 msgstr "Umordbar"
 
-#: ../exo/exo-icon-view.c:677
+#: ../exo/exo-icon-view.c:679
 msgid "View is reorderable"
 msgstr "Die Ansicht ist umordbar"
 
-#: ../exo/exo-icon-view.c:692
+#: ../exo/exo-icon-view.c:694
 msgid "Row Spacing"
 msgstr "Zeilenabstand"
 
-#: ../exo/exo-icon-view.c:693
+#: ../exo/exo-icon-view.c:695
 msgid "Space which is inserted between grid rows"
 msgstr "Platz, der zwischen Gitterzeilen eingefügt wird"
 
-#: ../exo/exo-icon-view.c:707
+#: ../exo/exo-icon-view.c:709
 msgid "Selection mode"
 msgstr "Auswahlmodus"
 
-#: ../exo/exo-icon-view.c:708
+#: ../exo/exo-icon-view.c:710
 msgid "The selection mode"
 msgstr "Der Auswahlmodus"
 
-#: ../exo/exo-icon-view.c:724
+#: ../exo/exo-icon-view.c:725
+msgid "Single Click"
+msgstr ""
+
+#: ../exo/exo-icon-view.c:726
+msgid "Whether the items in the view can be activated with single clicks"
+msgstr ""
+
+#: ../exo/exo-icon-view.c:741
 msgid "Spacing"
 msgstr "Abstand"
 
-#: ../exo/exo-icon-view.c:725
+#: ../exo/exo-icon-view.c:742
 msgid "Space which is inserted between cells of an item"
 msgstr "Platz, der zwischen Zellen eines Elements eingefügt wird"
 
-#: ../exo/exo-icon-view.c:752
+#: ../exo/exo-icon-view.c:769
 msgid "Selection Box Color"
 msgstr "Farbe der Auswahlbox"
 
-#: ../exo/exo-icon-view.c:753
+#: ../exo/exo-icon-view.c:770
 msgid "Color of the selection box"
 msgstr "Farbe für die Auswahlbox"
 
-#: ../exo/exo-icon-view.c:763
+#: ../exo/exo-icon-view.c:780
 msgid "Selection Box Alpha"
 msgstr "Alphawert für die Auswahlbox"
 
-#: ../exo/exo-icon-view.c:764
+#: ../exo/exo-icon-view.c:781
 msgid "Opacity of the selection box"
 msgstr "Deckkraft der Auswahlbox"
 
@@ -264,18 +272,18 @@ msgstr "Werkzeugleiste anpassen..."
 
 #: ../exo/exo-url.c:283
 #, c-format
-msgid "Unable to open `%s'"
-msgstr "Kann `%s' nicht öffnen"
+msgid "Unable to open \"%s\""
+msgstr "Konnte »%s« nicht öffnen"
 
 #: ../exo/exo-url.c:305
 #, c-format
-msgid "The URL `%s' is not supported"
-msgstr "Der URL `%s' wird nicht unterstützt"
+msgid "The URL \"%s\" is not supported"
+msgstr "Der URL »%s« wird nicht unterstützt"
 
 #: ../exo/exo-url.c:377
 #, c-format
-msgid "Failed to open `%s'."
-msgstr "Konnte `%s' nicht öffnen."
+msgid "Failed to open \"%s\"."
+msgstr "Konnte »%s« nicht öffnen."
 
 #: ../exo/exo-wrap-table.c:169
 msgid "Column spacing"
@@ -383,7 +391,7 @@ msgstr ""
 #: ../exo-csource/main.c:255 ../exo-open/main.c:107
 #, c-format
 msgid "Please report bugs to <%s>.\n"
-msgstr "Bitte melden Sie Fehler an <%s>\n"
+msgstr "Bitte melden Sie Fehler an <%s>.\n"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:119
 #: ../exo-helper/exo-helper-chooser-dialog.c:121
@@ -400,7 +408,7 @@ msgstr "Internet"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:153
 msgid "Default Web Browser"
-msgstr "Standardmäßiger Webbrowser"
+msgstr "Bevorzugter Webbrowser"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:161
 msgid ""
@@ -412,7 +420,7 @@ msgstr ""
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:185
 msgid "Default Mail Reader"
-msgstr "Standardmäßiger Email-Client"
+msgstr "Bevorzugter Email-Client"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:193
 msgid ""
@@ -431,14 +439,14 @@ msgstr "Werkzeuge"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:226
 msgid "Default Terminal Emulator"
-msgstr "Standardmäßiger Terminal-Emulator"
+msgstr "Bevorzugtes Terminal-Programm"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:234
 msgid ""
 "The preferred Terminal Emulator will be used to\n"
 "run commands that require a CLI environment."
 msgstr ""
-"Der bevorzugte Terminal-Emulator wird verwendet, um\n"
+"Das bevorzugte Terminal-Programm wird verwendet, um\n"
 "Befehle auszuführen, die eine CLI-Umgebung brauchen."
 
 #: ../exo-helper/exo-helper-chooser.c:177
@@ -457,15 +465,15 @@ msgstr "Keine Anwendung ausgewählt"
 
 #: ../exo-helper/exo-helper-chooser.c:335
 msgid "Failed to set default Web Browser"
-msgstr "Konnte den standardmäßigen Webbrowser nicht einstellen"
+msgstr "Konnte den bevorzugten Webbrowser nicht einstellen"
 
 #: ../exo-helper/exo-helper-chooser.c:336
 msgid "Failed to set default Mail Reader"
-msgstr "Konnte den standardmäßigen Email-Client nicht einstellen"
+msgstr "Konnte das bevorzugte Email-Programm nicht speichern"
 
 #: ../exo-helper/exo-helper-chooser.c:337
 msgid "Failed to set default Terminal Emulator"
-msgstr "Konnte den standardmäßigen Terminal-Emulator nicht einstellen"
+msgstr "Konnte das bevorzugte Terminal-Programm nicht speichern"
 
 #: ../exo-helper/exo-helper-chooser.c:401
 msgid "Select application"
@@ -473,23 +481,23 @@ msgstr "Anwendung auswählen"
 
 #: ../exo-helper/exo-helper-chooser.c:439
 msgid "Choose a custom Web Browser"
-msgstr "Eigenen Webbrowser angeben"
+msgstr "Benutzerdefinierten Webbrowser angeben"
 
 #: ../exo-helper/exo-helper-chooser.c:440
 msgid "Choose a custom Mail Reader"
-msgstr "Eigenen Email-Client angeben"
+msgstr "Benutzerdefiniertes Email-Programm angeben"
 
 #: ../exo-helper/exo-helper-chooser.c:441
 msgid "Choose a custom Terminal Emulator"
-msgstr "Eigenen Terminal-Emulator angeben"
+msgstr "Benutzerdefiniertes Terminal-Programm angeben"
 
 #: ../exo-helper/exo-helper-chooser.c:446
 msgid ""
 "Specify the application you want to use\n"
 "as default Web Browser for Xfce:"
 msgstr ""
-"Geben Sie die Anwendung an, die Sie als\n"
-"standardmäßigen Webbrowser für Xfce\n"
+"Geben Sie die Anwendung an, die Sie\n"
+"als bevorzugten Webbrowser für Xfce\n"
 "verwenden wollen:"
 
 #: ../exo-helper/exo-helper-chooser.c:447
@@ -498,7 +506,7 @@ msgid ""
 "as default Mail Reader for Xfce:"
 msgstr ""
 "Geben Sie die Anwendung an, die Sie als\n"
-"standardmäßigen Email-Client für Xfce\n"
+"bevorzugtes Email-Programm für Xfce\n"
 "verwenden wollen:"
 
 #: ../exo-helper/exo-helper-chooser.c:448
@@ -507,7 +515,7 @@ msgid ""
 "as default Terminal Emulator for Xfce:"
 msgstr ""
 "Geben Sie die Anwendung an, die Sie als\n"
-"standardmäßigen Terminal-Emulator für Xfce\n"
+"bevorzugtes Terminal-Programm für Xfce\n"
 "verwenden wollen:"
 
 #: ../exo-helper/exo-helper-chooser.c:512
@@ -540,8 +548,8 @@ msgid ""
 "Please choose your preferred Mail Reader\n"
 "now and click OK to proceed."
 msgstr ""
-"Wählen Sie Ihr bevorzugtes Mail Programm\n"
-"aus und klicken Sie auf OK fortzufahren."
+"Wählen Sie Ihr bevorzugtes Email-Programm\n"
+"aus und klicken Sie auf OK um fortzufahren."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:289
 msgid ""
@@ -549,7 +557,7 @@ msgid ""
 "Emulator now and click OK to proceed."
 msgstr ""
 "Wählen Sie Ihr bevorzugtes Terminal aus\n"
-"und klicken Sie auf OK fortzufahren."
+"und klicken Sie auf OK um fortzufahren."
 
 #: ../exo-helper/exo-helper.c:383
 msgid "No command specified"
@@ -681,8 +689,8 @@ msgid ""
 "  TerminalEmulator - The preferred Terminal Emulator."
 msgstr ""
 "  WebBrowser       - Der bevorzugte Webbrowser.\n"
-"  MailReader       - Das bevorzugte Mail Programm.\n"
-"  TerminalEmulator - Der bevorzugte Terminal-Emulator."
+"  MailReader       - Das bevorzugte Email-Programm.\n"
+"  TerminalEmulator - Das bevorzugte Terminal-Programm."
 
 #: ../exo-open/main.c:63
 msgid ""
@@ -692,11 +700,11 @@ msgid ""
 "pass additional parameters to the application (i.e. for TerminalEmulator\n"
 "you can pass the command line that should be run in the terminal)."
 msgstr ""
-"Falls Sie die --launch Option nicht angeben, wird exo-open alle angegebenen "
-"URLs mit ihrem bevorzugten URL-Handler öffnen. Ansonsten können Sie "
-"auswählen, welche bevorzugte Anwendung Sie starten wollen, und können dann "
-"zusätzliche Parameter der Anwendung übergeben (z.B. kann man dem "
-"TerminalEmulator die Kommandozeile übergeben, die im terminal ausgeführt "
+"Falls Sie die --launch Option nicht angeben, wird exo-open alle angegebenen\n"
+"URLs mit ihrem bevorzugten URL-Handler öffnen. Ansonsten können Sie\n"
+"auswählen, welche bevorzugte Anwendung Sie starten wollen, und können dann\n"
+"zusätzliche Parameter der Anwendung übergeben (z.B. kann man dem\n"
+"TerminalEmulator die Kommandozeile übergeben, die im terminal ausgeführt\n"
 "werden soll)."
 
 #: ../exo-open/main.c:100
@@ -715,10 +723,10 @@ msgstr ""
 
 #: ../exo-open/main.c:121
 #, c-format
-msgid "Failed to launch preferred application for category `%s'."
-msgstr "Konnte bevorzugte Anwendung aus der Kategorie `%s' nicht ausführen."
+msgid "Failed to launch preferred application for category \"%s\"."
+msgstr "Konnte bevorzugte Anwendung aus der Kategorie »%s« nicht ausführen."
 
 #: ../exo-open/main.c:144
 #, c-format
-msgid "Failed to open URL `%s'."
-msgstr "Konnte URL `%s' nicht öffnen."
+msgid "Failed to open URL \"%s\"."
+msgstr "Konnte URL »%s« nicht öffnen."
