--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-24	Benedikt Meurer <benny@xfce.org>
+
+	* autogen.sh: Be sure to run svn info with LC_ALL=C.
+
 2006-02-23	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.{c,h}: Mark the "text-column", "markup-column" and
