Added/Updated Finnish translations by Jari Rahkonen <jari.rahkonen@pp1.inet.fi>.
(Old svn revision: 20043)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,33 @@
+2006-02-25  Daichi Kawahata <daichi@xfce.org>
+
+	* fi.po: Updated Finnish translations by Jari Rahkonen
+	  <jari.rahkonen@pp1.inet.fi>.
+
+2006-02-24  Stavros Giannouris <stavrosg2002@freemail.gr>
+
+	* el.po: Updated Greek translation
+
+2006-02-24  Benedikt Meurer <benny@xfce.org>
+
+	* ca.po, de.po, el.po, en_GB.po, es.po, eu.po, fi.po, fr.po,
+	  ja.po, libexo-0.3.pot, pt_BR.po: Merge new strings.
+
+2006-02-24  Benedikt Meurer <benny@xfce.org>
+
+	* ca.po, de.po, el.po, en_GB.po, es.po, eu.po, fi.po, fr.po,
+	  ja.po, libexo-0.3.pot, pt_BR.po: Merge new strings.
+	* de.po: Further updates on the german translations.
+
+2006-02-23  Benedikt Meurer <benny@xfce.org>
+
+	* ca.po, de.po, el.po, en_GB.po, es.po, eu.po, fi.po, fr.po,
+	  ja.po, libexo-0.3.pot, pt_BR.po: Merge changed/new strings.
+	* de.po: Update the german translations.
+
+2006-02-22  Stavros Giannouris <stavrosg2002@freemail.gr>
+
+	* el.po: Updated Greek translations
+
 2006-02-22  Daichi Kawahata <daichi@xfce.org>
 
 	* eu.po: Added Basque translations by Piarres Beobide
