--- a/po/fi.po
+++ b/po/fi.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.3svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-02-24 22:17+0100\n"
-"PO-Revision-Date: 2006-02-02 22:09+0200\n"
+"PO-Revision-Date: 2006-02-24 19:32+0200\n"
 "Last-Translator: Jari Rahkonen <jari.rahkonen@pp1.inet.fi>\n"
 "Language-Team: os-cillation <info@os-cillation.com>\n"
 "MIME-Version: 1.0\n"
@@ -126,11 +126,11 @@ msgstr "Näytettävien sarakkeiden määrä"
 
 #: ../exo/exo-icon-view.c:655
 msgid "Enable Search"
-msgstr ""
+msgstr "Käytä hakua"
 
 #: ../exo/exo-icon-view.c:656
 msgid "View allows user to search through columns interactively"
-msgstr ""
+msgstr "Näkymä sallii käyttäjän hakea sarakkeista interaktiivisesti"
 
 #: ../exo/exo-icon-view.c:673
 msgid "Width for each item"
@@ -186,13 +186,12 @@ msgid "Space which is inserted between grid rows"
 msgstr "Ruudukon rivien välinen tyhjä tila"
 
 #: ../exo/exo-icon-view.c:799
-#, fuzzy
 msgid "Search Column"
-msgstr "Merkkaussarake"
+msgstr "Hakusarake"
 
 #: ../exo/exo-icon-view.c:800
 msgid "Model column to search through when searching through item"
-msgstr ""
+msgstr "Mallin sarake, josta etsitään kohteen kautta etsittäessä"
 
 #: ../exo/exo-icon-view.c:814
 msgid "Selection mode"
@@ -204,11 +203,11 @@ msgstr "Valintatapa"
 
 #: ../exo/exo-icon-view.c:830
 msgid "Single Click"
-msgstr ""
+msgstr "Kertanapsautus"
 
 #: ../exo/exo-icon-view.c:831
 msgid "Whether the items in the view can be activated with single clicks"
-msgstr ""
+msgstr "Voiko näkymän kohteet valita kertanapsautuksilla"
 
 #: ../exo/exo-icon-view.c:846
 msgid "Spacing"
@@ -282,17 +281,17 @@ msgid "Customize Toolbar..."
 msgstr "Mukauta välinepalkkia..."
 
 #: ../exo/exo-url.c:283
-#, fuzzy, c-format
+#, c-format
 msgid "Unable to open \"%s\""
 msgstr "Kohdetta \"%s\" ei voi avata"
 
 #: ../exo/exo-url.c:305
-#, fuzzy, c-format
+#, c-format
 msgid "The URL \"%s\" is not supported"
-msgstr "\"%s\" ei ole tuettu URL-tyyppi"
+msgstr "URL:ia \"%s\" ei tueta"
 
 #: ../exo/exo-url.c:377
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to open \"%s\"."
 msgstr "Kohteen \"%s\" avaaminen epäonnistui."
 
@@ -728,11 +727,11 @@ msgstr ""
 "\n"
 
 #: ../exo-open/main.c:121
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to launch preferred application for category \"%s\"."
 msgstr "Oletussovelluksen suorittaminen kategorialle \"%s\" epäonnistui."
 
 #: ../exo-open/main.c:144
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to open URL \"%s\"."
 msgstr "URL:n \"%s\" avaaminen epäonnistui."
