--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-25	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-view.c(exo_icon_view_button_release_event): Allow multi
+	  selection using Shift/Control in single click mode. Bug #1500.
+
 2006-02-24	Benedikt Meurer <benny@xfce.org>
 
 	* docs/manual/, Makefile.am, configure.in.in, docs/Makefile.am,
