--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-03-01	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-view.c(exo_icon_view_get_selected_items): Return the
+	  selected items in the correct order.
+
 2006-02-27	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-tree-view.c(exo_tree_view_button_press_event): In single-click
