Updated Finnish translations by Jari Rahkonen <jari.rahkonen@pp1.inet.fi>.
(Old svn revision: 20159)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,14 @@
+2006-03-02  Daichi Kawahata <daichi@xfce.org>
+
+	* fi.po: Updated Finnish translations by Jari Rahkonen
+	  <jari.rahkonen@pp1.inet.fi>.
+
+2006-02-26  Benedikt Meurer <benny@xfce.org>
+
+	* POTFILES.in:  Add exo-tree-view.c here.
+	* ca.po, de.po, el.po, en_GB.po, es.po, eu.po, fi.po, fr.po,
+	  ja.po, libexo-0.3.pot, pt_BR.po: Update translations.
+
 2006-02-25  Daichi Kawahata <daichi@xfce.org>
 
 	* ja.po: Updated Japanese translations.
