--- a/po/fi.po
+++ b/po/fi.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.3svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-02-26 14:57+0100\n"
-"PO-Revision-Date: 2006-02-24 19:32+0200\n"
+"PO-Revision-Date: 2006-03-01 21:24+0200\n"
 "Last-Translator: Jari Rahkonen <jari.rahkonen@pp1.inet.fi>\n"
 "Language-Team: os-cillation <info@os-cillation.com>\n"
 "MIME-Version: 1.0\n"
@@ -461,9 +461,8 @@ msgstr ""
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:296
 #: ../exo-helper/exo-helper-launcher-dialog.c:260
-#, fuzzy
 msgid "Failed to open the documentation browser."
-msgstr "Oletusarvoisen WWW-selaimen asettaminen epäonnistui"
+msgstr "Dokumentaatioselaimen avaaminen epäonnistui"
 
 #: ../exo-helper/exo-helper-chooser.c:177
 #: ../exo-helper/exo-helper-chooser.c:184
